Closed
Bug 292146
Opened 21 years ago
Closed 21 years ago
mouseout fires for element that has been removed from document
Categories
(Core :: DOM: UI Events & Focus Handling, defect, P2)
Core
DOM: UI Events & Focus Handling
Tracking
()
RESOLVED
FIXED
mozilla1.8beta2
People
(Reporter: dbaron, Assigned: dbaron)
References
()
Details
(Keywords: regression, testcase, Whiteboard: [patch])
Attachments
(1 file)
|
1005 bytes,
patch
|
roc
:
review+
roc
:
superreview+
asa
:
approval1.8b2+
|
Details | Diff | Splinter Review |
Since 1.7 (and probably from bug 284664), we've started firing mouseout on an
element that was removed from the document while the mouse was over it *after*
the element is removed from the document. Firing mouseout on the element when
it is no longer in the document seems wrong. I think we should either:
1. (preferable, I think, since it's compatible with 1.7 and IE/Windows) not
fire the mouseout at all, or
2. fire the mouseout before the element is removed from the document.
This has been causing me some problems with my patch on bug 241518.
Roc, any thoughts? Was this change intentional?
Steps to reproduce:
1. load attachment 182012 [details]
2. move the mouse slowly over the yellow box
Expected results:
After one second, an alert showing:
mouseover
starting remove
ending remove
Actual results:
After one second, an alert showing:
mouseover
starting remove
ending remove
mouseout
| Assignee | ||
Comment 1•21 years ago
|
||
Attachment #182017 -
Flags: review?(roc)
Comment on attachment 182017 [details] [diff] [review]
patch
it was not intentional. Just a byproduct of making mouseover use content
instead of frames (which is still the right thing!)
Attachment #182017 -
Flags: superreview+
Attachment #182017 -
Flags: review?(roc)
Attachment #182017 -
Flags: review+
| Assignee | ||
Updated•21 years ago
|
Attachment #182017 -
Flags: approval1.8b2?
| Assignee | ||
Updated•21 years ago
|
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [patch]
Target Milestone: --- → mozilla1.8beta2
Comment 3•21 years ago
|
||
Comment on attachment 182017 [details] [diff] [review]
patch
a=asa
Attachment #182017 -
Flags: approval1.8b2? → approval1.8b2+
| Assignee | ||
Comment 4•21 years ago
|
||
Fix checked in to trunk, 2005-04-28 13:47 -0700.
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Component: Event Handling → User events and focus handling
You need to log in
before you can comment on or make changes to this bug.
Description
•