Mouseout shouldn't fire on elements that were removed from the document.  b=292146  r+sr=roc  a=asa